--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ sqlserver.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 logging.level.org.springframework.jdbc.core=DEBUG
 logging.level.org.hibernate: ERROR
 
-
+password-crypth="$SolucionesSDigitales2023@"
 
 #-Dauth.tenant=TENANT_ID
 
