--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8082
 #properties de mysql
 mysql.datasource.jdbc-url=jdbc:mysql://mysqlhispam-dev.mysql.database.azure.com:3306/budget?serverTimezone=GMT-0
 mysql.datasource.username=adminhispam_dev
@@ -26,7 +26,7 @@ sqlserver.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 logging.level.org.springframework.jdbc.core=DEBUG
 logging.level.org.hibernate: ERROR
 
-password-crypth="$SolucionesSDigitales2023@"
+password.crypth="@SolucionesSDigitales2023@"
 
 #-Dauth.tenant=TENANT_ID
 
