--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
     <artifactId>azure-identity</artifactId>
     <version>1.9.2</version>
 </dependency>
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-lts8on</artifactId>
+			<version>2.73.3</version>
+		</dependency>
 
 	</dependencies>
 
