CHORE: change all values of double to bigDecimal, add colombia module.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,10 @@ sqlserver.datasource.username=alvaro.quinteros@telefonica.com
 sqlserver.datasource.password=Alva4544$
 sqlserver.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 sqlserver.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
+server.error.include-stacktrace=ALWAYS
 logging.level.org.springframework.jdbc.core=DEBUG
 logging.level.org.hibernate: ERROR
 
