--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
     <version>1.9.2</version>
 </dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.bouncycastle</groupId>
 			<artifactId>bcpkix-lts8on</artifactId>
 			<version>2.73.3</version>
