--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,17 @@
 server.port=8082
 #properties de mysql
-mysql.datasource.jdbc-url=jdbc:mysql://mysqlhispam-dev.mysql.database.azure.com:3306/budget?serverTimezone=GMT-0
-mysql.datasource.username=adminhispam_dev
-mysql.datasource.password=Telefonica$SD2023
-mysql.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-mysql.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-#PROD MYSQL
-#mysql.datasource.jdbc-url=jdbc:mysql://mysqlhispam-prod.mysql.database.azure.com:3306/budget?allowPublicKeyRetrieval=true&serverTimezone=GMT-0
-#mysql.datasource.username=adminhispam_prod
-#mysql.datasource.password=5h7NdNXtvZA2nT7
+#mysql.datasource.jdbc-url=jdbc:mysql://mysqlhispam-dev.mysql.database.azure.com:3306/budget?serverTimezone=GMT-0
+#mysql.datasource.username=adminhispam_dev
+#mysql.datasource.password=Telefonica$SD2023
 #mysql.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #mysql.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#PROD MYSQL
+mysql.datasource.jdbc-url=jdbc:mysql://mysqlhispam-prod.mysql.database.azure.com:3306/budget?allowPublicKeyRetrieval=true&serverTimezone=GMT-0
+mysql.datasource.username=adminhispam_prod
+mysql.datasource.password=5h7NdNXtvZA2nT7
+mysql.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mysql.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
 
