--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,10 +16,10 @@ mysql.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
 #properties de SQLSERVER
-sqlserver.datasource.jdbc-url=jdbc:sqlserver://server-atenea.database.windows.net:1433;database=bd-atenea;encrypt=true;trustServerCertificate=false;Authentication=ActiveDirectoryPassword
-#sqlserver.datasource.jdbc-url=jdbc:sqlserver://server-atenea.database.windows.net:1433;database=bd-atenea;encrypt=true;trustServerCertificate=false;Authentication=ActiveDirectoryDefault
-sqlserver.datasource.username=alvaro.quinteros@telefonica.com
-sqlserver.datasource.password=Alva4544$
+#sqlserver.datasource.jdbc-url=jdbc:sqlserver://server-atenea.database.windows.net:1433;database=bd-atenea;encrypt=true;trustServerCertificate=false;Authentication=ActiveDirectoryPassword
+sqlserver.datasource.jdbc-url=jdbc:sqlserver://server-atenea.database.windows.net:1433;database=bd-atenea;encrypt=true;trustServerCertificate=false;Authentication=ActiveDirectoryDefault
+#sqlserver.datasource.username=alvaro.quinteros@telefonica.com
+#sqlserver.datasource.password=Alva4544$
 sqlserver.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 sqlserver.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
