--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,25 @@
 server.port=8082
 #properties de mysql
-#mysql.datasource.jdbc-url=jdbc:mysql://mysqlhispam-dev.mysql.database.azure.com:3306/budget?serverTimezone=GMT-0
-#mysql.datasource.username=adminhispam_dev
-#mysql.datasource.password=Telefonica$SD2023
-#mysql.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#mysql.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
-#PROD MYSQL
-mysql.datasource.jdbc-url=jdbc:mysql://mysqlhispam-prod.mysql.database.azure.com:3306/budget?allowPublicKeyRetrieval=true&serverTimezone=GMT-0
-mysql.datasource.username=adminhispam_prod
-mysql.datasource.password=5h7NdNXtvZA2nT7
+mysql.datasource.jdbc-url=jdbc:mysql://mysqlhispam-dev.mysql.database.azure.com:3306/budget?serverTimezone=GMT-0
+mysql.datasource.username=adminhispam_dev
+mysql.datasource.password=Telefonica$SD2023
 mysql.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mysql.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+#PROD MYSQL
+#mysql.datasource.jdbc-url=jdbc:mysql://mysqlhispam-prod.mysql.database.azure.com:3306/budget?allowPublicKeyRetrieval=true&serverTimezone=GMT-0
+#mysql.datasource.username=adminhispam_prod
+#mysql.datasource.password=5h7NdNXtvZA2nT7
+#mysql.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#mysql.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 
 
 #properties de SQLSERVER
-#sqlserver.datasource.jdbc-url=jdbc:sqlserver://server-atenea.database.windows.net:1433;database=bd-atenea;encrypt=true;trustServerCertificate=false;Authentication=ActiveDirectoryPassword
-sqlserver.datasource.jdbc-url=jdbc:sqlserver://server-atenea.database.windows.net:1433;database=bd-atenea;encrypt=true;trustServerCertificate=false;Authentication=ActiveDirectoryDefault
-#sqlserver.datasource.username=alvaro.quinteros@telefonica.com
-#sqlserver.datasource.password=Alva4544$
+sqlserver.datasource.jdbc-url=jdbc:sqlserver://server-atenea.database.windows.net:1433;database=bd-atenea;encrypt=true;trustServerCertificate=false;Authentication=ActiveDirectoryPassword
+#sqlserver.datasource.jdbc-url=jdbc:sqlserver://server-atenea.database.windows.net:1433;database=bd-atenea;encrypt=true;trustServerCertificate=false;Authentication=ActiveDirectoryDefault
+sqlserver.datasource.username=alvaro.quinteros@telefonica.com
+sqlserver.datasource.password=Alva4545$
 sqlserver.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 sqlserver.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
