--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
 			<scope>provided</scope>
 			<type>zip</type>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
