--- a/cfg/sonar.properties
+++ b/cfg/sonar.properties
@@ -3,8 +3,9 @@
 sonar.projectKey=ms-hispam-budget
 sonar.host.url=http://sonarqube:9000
 sonar.projectName=ms-hispam-budget
-sonar.projectVersion=2.0
+sonar.projectVersion=1.0
 # sonar
+sonar.tests=src/test/java
 sonar.sources=src/main/java
 sonar.java.binaries=target
 sonar.coverage.jacoco.reportPaths=target/jacoco.exec
