--- a/cfg/Jenkinsfile
+++ b/cfg/Jenkinsfile
@@ -37,7 +37,7 @@ pipeline {
                                      }
                                      post{
                                         always{
-                                            junit '**/target/surefire-reports/TEST-*.xml
+                                            junit '**/target/surefire-reports/TEST-*.xml'
                                         }
                                      }
                                  }
