--- a/cfg/Jenkinsfile
+++ b/cfg/Jenkinsfile
@@ -52,6 +52,13 @@ pipeline {
                 						}
                 					}
                 				}
+          	    stage('RunSCAAnalysisUsingSnyk') {
+                                    steps {		
+                                        withCredentials([string(credentialsId: 'SNYK_TOKEN', variable: 'SNYK_TOKEN')]) {
+                                            sh 'mvn snyk:test -fn'
+                                        }
+			                        }
+                                }		
 				/*stage('Delivery'){
 					steps{
 						    sh 'mvn package azure-webapp:deploy'
