--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,15 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>io.snyk</groupId>
+				<artifactId>snyk-maven-plugin</artifactId>
+				<version>2.0.0</version>
+				<inherited>false</inherited>
+				<configuration>
+				  <org>gpch9413</org>
+				</configuration>
+			  </plugin>
 		</plugins>
 	</build>
 	<repositories>
