--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,7 @@
 					</deployment>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 				<groupId>com.microsoft.azure</groupId>
 				<artifactId>azure-webapp-maven-plugin</artifactId>
 				<version>2.9.0</version>
@@ -193,35 +193,7 @@
 						</resources>
 					</deployment>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.7</version> <!-- Usa la versión más reciente -->
-				<executions>
-					<execution>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>report</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>io.snyk</groupId>
-				<artifactId>snyk-maven-plugin</artifactId>
-				<version>2.0.0</version>
-				<inherited>false</inherited>
-				<configuration>
-				  <org>gpch9413</org>
-				</configuration>
-			  </plugin>
+			</plugin>-->
 		</plugins>
 	</build>
 	<repositories>
