--- a/cfg/Jenkinsfile
+++ b/cfg/Jenkinsfile
@@ -54,7 +54,7 @@ pipeline {
                 				}
                                  stage('Analysis DAST') {
                 					steps{
-                						dependencyCheck additionalArguments: '' , odcInstallation:'DP-check'
+                						dependencyCheck additionalArguments: '--format HTML' , odcInstallation:'DP-check'
                                         dependencyCheckPublisher pattern: '**/dependency-check-report.html'
                 					}
                 				}
