--- a/cfg/Jenkinsfile
+++ b/cfg/Jenkinsfile
@@ -55,6 +55,7 @@ pipeline {
                                  stage('Analysis DAST') {
                 					steps{
                 						dependencyCheck additionalArguments: '--format HTML' , odcInstallation:'DP-check'
+                                        dependencyCheckPublisher pattern: '**/dependency-check-report.html'
                 					}
                 				}
           	   	
