--- a/cfg/Jenkinsfile
+++ b/cfg/Jenkinsfile
@@ -52,13 +52,20 @@ pipeline {
                 						}
                 					}
                 				}
-                                 stage('Analysis DAST') {
+                stage('Analysis DAST') {
                 					steps{
                 						dependencyCheck additionalArguments: '--format HTML' , odcInstallation:'DP-check'
                                         dependencyCheckPublisher pattern: '**/dependency-check-report.html'
                 					}
                 				}
-          	   	
+                                 stage('Scan Trivi Security') {
+                					steps{
+							sh 'cp target/${ARTIFACT_ID}-${VERSION}.jar cfg/'
+							sh 'docker build -t acrhispam.azurecr.io/${NAME}:${VERSION} --build-arg nombreArtefacto=${ARTIFACT_ID}-${VERSION}.jar cfg'
+                            sh 'trivy --no-progress --exit-code 1 --severity MEDIUM,HIGH,CRITICAL acrhispam.azurecr.io/${NAME}:${VERSION}'
+                            sh 'docker rmi acrhispam.azurecr.io/${NAME}:${VERSION} acrhispam.azurecr.io/${NAME}:latest'
+                					}
+                				}
 				/*stage('Delivery'){
 					steps{
 						    sh 'mvn package azure-webapp:deploy'
