--- a/cfg/Jenkinsfile
+++ b/cfg/Jenkinsfile
@@ -70,6 +70,11 @@ pipeline {
                 					}
                 				}
                                  stage('Scan Trivi Security') {
+                                    environment {
+						VERSION = readMavenPom().getVersion()
+						ARTIFACT_ID = readMavenPom().getArtifactId()
+						NAME = "${ARTIFACT_ID}"
+					}
                 					steps{
 							sh 'cp target/${ARTIFACT_ID}-${VERSION}.jar cfg/'
 							sh 'docker build -t acrhispam.azurecr.io/${NAME}:${VERSION} --build-arg nombreArtefacto=${ARTIFACT_ID}-${VERSION}.jar cfg'
