--- a/cfg/Jenkinsfile
+++ b/cfg/Jenkinsfile
@@ -30,18 +30,7 @@ pipeline {
 						checkout scm
                     }
                 }
-                stage('UnitTest') {
-                                     steps {
-
-                 		        sh 'mvn clean test jacoco:prepare-agent jacoco:report'
-
-                                     }
-                                     post{
-                                        always{
-                                            junit '**/target/surefire-reports/TEST-*.xml'
-                                        }
-                                     }
-                                 }
+        
                 stage('Build') {
                     steps {
 						sh 'mvn -f pom.xml clean install -DskipTests'
@@ -54,7 +43,7 @@ pipeline {
                                      }
                               }
                 }                
-                stage('Scan and Analysis SAST') {
+              /*  stage('Scan and Analysis SAST') {
                 					steps{
                 						script {
                 						  scannerHome = tool 'sonarQube'
@@ -63,7 +52,7 @@ pipeline {
                 						  sh "${scannerHome}/bin/sonar-scanner -Dproject.settings=cfg/sonar.properties"
                 						}
                 					}
-                				}
+                				}*/
                 stage('Analysis DAST') {
                 					steps{
                 						dependencyCheck additionalArguments: '--format HTML' , odcInstallation:'DP-check'
@@ -78,7 +67,7 @@ pipeline {
                 					steps{
 							sh 'cp target/${ARTIFACT_ID}-${VERSION}.jar cfg/'
 							sh 'docker build -t acrhispam.azurecr.io/${NAME}:${VERSION} --build-arg nombreArtefacto=${ARTIFACT_ID}-${VERSION}.jar cfg'
-                            sh 'trivy  acrhispam.azurecr.io/${NAME}:${VERSION}'
+                            sh 'trivy  image acrhispam.azurecr.io/${NAME}:${VERSION}'
                             sh 'docker rmi acrhispam.azurecr.io/${NAME}:${VERSION} acrhispam.azurecr.io/${NAME}:latest'
                 					}
                 				}
