--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ password.crypth="@SolucionesSDigitales2023@"
 #-Dauth.tenant=TENANT_ID
 spring.cloud.compatibility-verifier.enabled=false
 
-mail=https://rhdigitalbackprod.azurewebsites.net
+mail=https://apimngr-hispam-prod.azure-api.net/peru
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
