--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,7 +25,7 @@ sqlserver.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
 logging.level.org.springframework.jdbc.core=DEBUG
 logging.level.org.hibernate: ERROR
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 password.crypth="@SolucionesSDigitales2023@"
 
 #-Dauth.tenant=TENANT_ID
