--- a/cfg/sonar.properties
+++ b/cfg/sonar.properties
@@ -10,6 +10,8 @@ sonar.sources=src/main/java
 sonar.java.binaries=target
 sonar.coverage.jacoco.reportPaths=target/jacoco.exec
 sonar.coverage.jacoco.xmlReportsPaths=target/site/jacoco/jacoco.xml
+sonar.dependencyCheck.jsonReportPath=dependency-check-report.json
+sonar.dependencyCheck.htmlReportPath=dependency-check-report.html
 # codificacion
 sonar.sourceEncoding=UTF-8
 # librerias
