--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>5.3.25</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-text</artifactId>
+			<version>1.9</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -174,6 +179,14 @@
 							</resource>
 						</resources>
 					</deployment>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>14</source>
+					<target>14</target>
 				</configuration>
 			</plugin>
 			<!--<plugin>
