--- a/cfg/Jenkinsfile
+++ b/cfg/Jenkinsfile
@@ -71,11 +71,53 @@ pipeline {
                 }
             }
         }
-        stage('Deploy') {
-			steps{
-				sh 'mvn package azure-webapp:deploy'
+        stage('Package & Publish') {
+           environment {
+						VERSION = readMavenPom().getVersion()
+						ARTIFACT_ID = readMavenPom().getArtifactId()
+						NAME = "${ARTIFACT_ID}"
+					}
+            steps {
+                withCredentials([azureServicePrincipal('user_azure')]) {
+                    sh 'az login --service-principal -u $AZURE_CLIENT_ID -p $AZURE_CLIENT_SECRET -t $AZURE_TENANT_ID'
+					sh 'TOKEN=$(az acr login --name acrhispam --expose-token --output tsv --query accessToken) && docker login acrhispam.azurecr.io --username 00000000-0000-0000-0000-000000000000 --password $TOKEN'
+                    sh 'cp target/${ARTIFACT_ID}-${VERSION}.jar cfg/'
+					sh 'docker build -t acrhispam.azurecr.io/${NAME}:${VERSION} --build-arg nombreArtefacto=${ARTIFACT_ID}-${VERSION}.jar cfg'
+				    sh 'docker inspect -f . acrhispam.azurecr.io/${NAME}:${VERSION}'
+					sh 'docker tag acrhispam.azurecr.io/${NAME}:${VERSION} acrhispam.azurecr.io/${NAME}:latest'
+					sh 'docker push acrhispam.azurecr.io/${NAME}:${VERSION}'
+					sh 'docker push acrhispam.azurecr.io/${NAME}:latest'
+					sh 'docker rmi acrhispam.azurecr.io/${NAME}:${VERSION} acrhispam.azurecr.io/${NAME}:latest'
+					sh 'docker logout'
+					sh 'az logout'
+                }
+            }
+        }
 
+        stage('Deploy') {
+            environment {
+						ARTIFACT_ID = readMavenPom().getArtifactId()
+						AKS = "${config.aks}"
+						RESOURCE_GROUP = "${config.resource_group}"
 			}
+			steps{
+						withCredentials([azureServicePrincipal('user_azure')]) {
+							sh 'az login --service-principal -u $AZURE_CLIENT_ID -p $AZURE_CLIENT_SECRET -t $AZURE_TENANT_ID'
+							sh 'az aks get-credentials --name ${AKS} --resource-group ${RESOURCE_GROUP} --admin --overwrite-existing'
+							sh 'kubectl apply -f ./cfg/${ARTIFACT_ID}-deployment.yml'
+						}
+			}
+        }
+        stage('Publishing'){
+                environment {
+                    ARTIFACT_ID = readMavenPom().getArtifactId()
+                    AKS = "${config.aks}"
+                    RESOURCE_GROUP = "${config.resource_group}"
+                }
+                steps{
+                     sh '/root/.dotnet/tools/dotnet-apim -c "./cfg/api/apim-service.yml" -o "./cfg/output"'
+                     sh 'az group deployment create --resource-group ${RESOURCE_GROUP} --template-file "./cfg/output/apim_deploy.template.json" --parameters "./cfg/output/parameters.json"'
+                }
         }
     }
     post {
