FIX report planner mes base

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ sqlserver.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDri
 sqlserver.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
 
 # Configuración de logging
-logging.level.org.springframework.jdbc.core=DEBUG
+logging.level.org.springframework.jdbc.core=TRACE
 #logging.level.org.hibernate=ERROR
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
@@ -55,5 +55,5 @@ api.container=hispamjob
 #spring.jpa.properties.hibernate.generate_statistics=true
 
 # Configuración de errores del servidor
-#server.error.include-stacktrace=ALWAYS
+server.error.include-stacktrace=ALWAYS
 #spring.mvc.throw-exception-if-no-handler-found=true
