--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ mysql.datasource.jdbc-url=jdbc:mysql://mysqlhispam-prod.mysql.database.azure.com
 mysql.datasource.username=adminhispam_prod
 mysql.datasource.password=5h7NdNXtvZA2nT7
 mysql.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-mysql.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+mysql.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 
 
