--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -58,5 +58,6 @@ api.container=hispamjob
 # Configuración de errores del servidor
 server.error.include-stacktrace=ALWAYS
 #spring.mvc.throw-exception-if-no-handler-found=true
+server.tomcat.max-keep-alive-requests=-1
 server.tomcat.connection-timeout=300000
 spring.mvc.async.request-timeout=300s
