--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,4 +60,4 @@ server.error.include-stacktrace=ALWAYS
 #spring.mvc.throw-exception-if-no-handler-found=true
 server.tomcat.max-keep-alive-requests=-1
 server.tomcat.connection-timeout=3600000
-spring.mvc.async.request-timeout=300s
+spring.mvc.async.request-timeout=1200000
