--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 	<groupId>ms.hispam.budget</groupId>
 	<artifactId>ms-hispam-budget</artifactId>
-	<version>0.1.10-SNAPSHOT</version>
+	<version>0.2.1-SNAPSHOT</version>
 	<name>ms-hispam-budget</name>
 	<description>Proyecto de Simulaciones de presupuesto</description>
 	<properties>
@@ -155,6 +155,36 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.1.0</version>
+			</plugin>
+			<plugin>
+				<groupId>com.microsoft.azure</groupId>
+				<artifactId>azure-webapp-maven-plugin</artifactId>
+				<version>2.13.0</version>
+				<configuration>
+					<schemaVersion>v2</schemaVersion>
+					<subscriptionId>87a1d13f-c4f7-4bd2-8fd7-a6f3ca8e57c7</subscriptionId>
+					<resourceGroup>PRODUCTION-SD</resourceGroup>
+					<appName>ms-hispam-budget</appName>
+					<pricingTier>P1v3</pricingTier>
+					<region>eastus</region>
+					<appServicePlanName>ms-hispam-budget-plan</appServicePlanName>
+					<appServicePlanResourceGroup>PRODUCCION</appServicePlanResourceGroup>
+					<runtime>
+						<os>Linux</os>
+						<javaVersion>Java 17</javaVersion>
+						<webContainer>Java SE</webContainer>
+					</runtime>
+					<deployment>
+						<resources>
+							<resource>
+								<directory>${project.basedir}/target</directory>
+								<includes>
+									<include>*.jar</include>
+								</includes>
+							</resource>
+						</resources>
+					</deployment>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
