--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,11 @@
 			<version>2.73.3</version>
 		</dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.13.5</version> <!-- Asegúrate de usar una versión compatible con tu Jackson actual -->
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
