--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,3 +61,6 @@ server.error.include-stacktrace=ALWAYS
 server.tomcat.max-keep-alive-requests=-1
 server.tomcat.connection-timeout=3600000
 spring.mvc.async.request-timeout=1200000
+
+spring.thymeleaf.prefix=${THYMELEAF_PREFIX:classpath:/templates/}
+spring.thymeleaf.suffix=.html
