FEATURE OFFICIAL VERSION HISTORY

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,3 +64,9 @@ spring.mvc.async.request-timeout=1200000
 
 spring.thymeleaf.prefix=${THYMELEAF_PREFIX:classpath:/templates/}
 spring.thymeleaf.suffix=.html
+
+spring.jpa.properties.hibernate.jdbc.batch_size=1000
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
+spring.jpa.properties.hibernate.generate_statistics=true
