--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,3 +70,9 @@ spring.jpa.properties.hibernate.order_inserts=true
 spring.jpa.properties.hibernate.order_updates=true
 spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 spring.jpa.properties.hibernate.generate_statistics=true
+
+
+# Habilitar el registro detallado de consultas
+#logging.level.org.springframework.data.jpa.repository.query=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
